--- a/config-server/src/main/resources/config/auth-service-dev.yml
+++ b/config-server/src/main/resources/config/auth-service-dev.yml
@@ -10,8 +10,7 @@ spring:
     name: auth-service
   
   datasource:
-    # url: jdbc:mysql://localhost:3306/hotel_management_db?createDatabaseIfNotExist=true
-    url: jdbc:mysql://localhost:3306/hotel_management_db?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/hotel_management_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
     username: root
     password: Shakib@40
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -21,9 +20,7 @@ spring:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
-    # properties:
-    #   hibernate:
-    #     dialect: org.hibernate.dialect.MySQL8Dialect
+
   
   redis:
     host: localhost
