--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,37 +35,37 @@ services:
       retries: 10
       start_period: 10s
 
-  mysql-order:
-    image: mysql:8.0
-    container_name: mysql-order
-    environment:
-      MYSQL_ROOT_PASSWORD: "Shakib@40"
-      MYSQL_DATABASE: hotel_management_db_order
-    networks:
-      - spring-net
-    volumes:
-      - mysql-order-data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h localhost -p$${MYSQL_ROOT_PASSWORD} --silent"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
-      start_period: 20s
+  # mysql-order:
+  #   image: mysql:8.0
+  #   container_name: mysql-order
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: "Shakib@40"
+  #     MYSQL_DATABASE: hotel_management_db_order
+  #   networks:
+  #     - spring-net
+  #   volumes:
+  #     - mysql-order-data:/var/lib/mysql
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "mysqladmin ping -h localhost -p$${MYSQL_ROOT_PASSWORD} --silent"]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 10
+  #     start_period: 20s
 
-  redis-order:
-    image: redis:7-alpine
-    container_name: redis-order
-    command: ["redis-server", "--appendonly", "yes"]
-    networks:
-      - spring-net
-    volumes:
-      - redis-order-data:/data
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
-      start_period: 10s
+  # redis-order:
+  #   image: redis:7-alpine
+  #   container_name: redis-order
+  #   command: ["redis-server", "--appendonly", "yes"]
+  #   networks:
+  #     - spring-net
+  #   volumes:
+  #     - redis-order-data:/data
+  #   healthcheck:
+  #     test: ["CMD", "redis-cli", "ping"]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 10
+  #     start_period: 10s
 
   config-server:
     build: ./config-server
@@ -119,51 +119,53 @@ services:
       retries: 5
       start_period: 15s
 
-  order-service:
-    build: ./order-service
-    container_name: order-service
-    ports:
-      - "8083:8083"
-    depends_on:
-      config-server:
-        condition: service_healthy
-      discovery-server:
-        condition: service_healthy
-      mysql-order:
-        condition: service_healthy
-      redis-order:
-        condition: service_healthy
-    networks:
-      - spring-net
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8083/orders/actuator/health"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-      start_period: 15s
+  # order-service:
+  #   build: ./order-service
+  #   container_name: order-service
+  #   ports:
+  #     - "8083:8083"
+  #   depends_on:
+  #     config-server:
+  #       condition: service_healthy
+  #     discovery-server:
+  #       condition: service_healthy
+  #     mysql-order:
+  #       condition: service_healthy
+  #     redis-order:
+  #       condition: service_healthy
+  #   networks:
+  #     - spring-net
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:8083/orders/actuator/health"]
+  #     interval: 5s
+  #     timeout: 5s
+  #     retries: 5
+  #     start_period: 15s
 
-  api-gateway:
-    build: ./api-gateway
-    container_name: api-gateway
-    ports:
-      - "8080:8080"
-    depends_on:
-      auth-service:
-        condition: service_healthy
-      order-service:
-        condition: service_healthy
-      config-server:
-        condition: service_healthy
-      discovery-server:
-        condition: service_healthy
-    networks:
-      - spring-net
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-      start_period: 15s
+  # api-gateway:
+  #   build: ./api-gateway
+  #   container_name: api-gateway
+  #   ports:
+  #     - "8080:8080"
+  #   depends_on:
+  #     auth-service:
+  #       condition: service_healthy
+  #     order-service:
+  #       condition: service_healthy
+  #     config-server:
+  #       condition: service_healthy
+  #     discovery-server:
+  #       condition: service_healthy
+  #   networks:
+  #     - spring-net
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
+  #     interval: 5s
+  #     timeout: 5s
+  #     retries: 5
+  #     start_period: 15s
+
+
 networks:
   spring-net:
     driver: bridge
