--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -32,12 +32,18 @@
 	</properties>
     <dependencies>
 
+        <!-- <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-cloud-gateway</artifactId>
+        <version>3.5.6</version>
+    </dependency> -->
+
         <!-- Spring Cloud Gateway -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
-        </dependency>
-
+        </dependency> 
+ 
         <!-- Spring Cloud Config Client -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
