--- a/config-server/src/main/resources/config/auth-service-dev.yml
+++ b/config-server/src/main/resources/config/auth-service-dev.yml
@@ -20,20 +20,9 @@ spring:
       ddl-auto: update
     show-sql: true
   
-  # datasource:
-  #   url: jdbc:mysql://mysql-auth:3306/hotel_management_db_auth?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-  #   username: root
-  #   password: Shakib@40
-  
-  # jpa:
-  #   hibernate:
-  #     ddl-auto: update
-  #   show-sql: true
-  #   database-platform: org.hibernate.dialect.MySQL8Dialect
   
   redis:
-    # host: redis-auth
-    host: localhost
+    host: host.docker.internal
     port: 6379
     password: 
     timeout: 60000
