--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,14 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - spring-net
+
   auth-service:
     build: ./auth-service
     container_name: auth-service
@@ -41,8 +49,15 @@ services:
         condition: service_healthy
       discovery-server:
         condition: service_healthy
+      redis:
+        condition: service_started
     networks:
       - spring-net
+    environment:
+      - SPRING_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
+      - SPRING_DATA_REDIS_HOST=redis
+      - SPRING_DATA_REDIS_PORT=6379
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8081/auth/actuator/health"]
       interval: 5s
