--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,13 +31,13 @@ services:
       timeout: 5s
       retries: 5
 
-  # redis:
-  #   image: redis:7-alpine
-  #   container_name: redis
-  #   ports:
-  #     - "6379:6379"
-  #   networks:
-  #     - spring-net
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - spring-net
 
   auth-service:
     build: ./auth-service
@@ -56,8 +56,7 @@ services:
     environment:
       - SPRING_REDIS_HOST=redis
       - SPRING_REDIS_PORT=6379
-      - SPRING_DATA_REDIS_HOST=redis
-      - SPRING_DATA_REDIS_PORT=6379
+      - SPRING_REDIS_PASSWORD=
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8081/auth/actuator/health"]
       interval: 5s
