--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -63,7 +63,7 @@
         </dependency>
 
         <!-- JWT -->
-        <dependency>
+        <!-- <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.11.5</version>
@@ -79,7 +79,7 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.11.5</version>
             <scope>runtime</scope>
-        </dependency>
+        </dependency> -->
 
         <!-- Testing -->
         <dependency>
