--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -60,7 +60,7 @@
         </dependency>
 
         <!-- JWT to validate bearer tokens -->
-        <dependency>
+        <!-- <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.11.5</version>
@@ -76,7 +76,7 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.11.5</version>
             <scope>runtime</scope>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>com.mysql</groupId>
