--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,31 +65,31 @@ services:
       retries: 5
       start_period: 15s
 
-  order-service:
-    build: ./order-service
-    container_name: order-service
-    ports:
-      - "8083:8083"
-    depends_on:
-      config-server:
-        condition: service_healthy
-      discovery-server:
-        condition: service_healthy
-      redis:
-        condition: service_started
-    environment:
-      - SPRING_REDIS_HOST=redis
-      - SPRING_REDIS_PORT=6379
-      - SPRING_DATA_REDIS_HOST=redis
-      - SPRING_DATA_REDIS_PORT=6379
-    networks:
-      - spring-net
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8083/orders/actuator/health"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-      start_period: 15s
+  # order-service:
+  #   build: ./order-service
+  #   container_name: order-service
+  #   ports:
+  #     - "8083:8083"
+  #   depends_on:
+  #     config-server:
+  #       condition: service_healthy
+  #     discovery-server:
+  #       condition: service_healthy
+  #     redis:
+  #       condition: service_started
+  #   environment:
+  #     - SPRING_REDIS_HOST=redis
+  #     - SPRING_REDIS_PORT=6379
+  #     - SPRING_DATA_REDIS_HOST=redis
+  #     - SPRING_DATA_REDIS_PORT=6379
+  #   networks:
+  #     - spring-net
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:8083/orders/actuator/health"]
+  #     interval: 5s
+  #     timeout: 5s
+  #     retries: 5
+  #     start_period: 15s
 
   api-gateway:
     build: ./api-gateway
@@ -99,8 +99,8 @@ services:
     depends_on:
       auth-service:
         condition: service_healthy
-      order-service:
-        condition: service_healthy
+      # order-service:
+      #   condition: service_healthy
       config-server:
         condition: service_healthy
       discovery-server:
